adding authentication layer and/or access control layer

--- a/engine/composer.json
+++ b/engine/composer.json
@@ -35,7 +35,8 @@
             "app/database/seeds"
         ],
         "psr-0": {
-            "": "app/controllers"
+            "": "app/controllers",
+            "": "app/custom"
         },
         "psr-4": {
             "Bootstrap\\": "bootstrap/"
