Authentication class have no impact on code git status!

--- a/engine/composer.json
+++ b/engine/composer.json
@@ -35,8 +35,7 @@
             "app/database/seeds"
         ],
         "psr-0": {
-            "": "app/controllers",
-            "": "app/custom"
+            "": "app/controllers"
         },
         "psr-4": {
             "Bootstrap\\": "bootstrap/"
